--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,18 @@
 h1 {
     color: #221e1e;
     font-family:'Public Sans', sans-serif;
-    font-size: 35px;
-    font-weight: bold;
+    font-size: 45px;
+    font-weight: 900;
+    text-align: center;
+}
+
+ul {
+    font-family: 'Verdana', sans-serif;
+    font-size: 22px;
+    text-align: left;
+}
+
+img {
+    height: auto;
+    width: 800px;
 }
