--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,19 @@
+* {
+    margin: 40px;
+}
+
+html {
+    box-sizing: border-box;
+}
+
 h1 {
     color: #221e1e;
     font-family:'Public Sans', sans-serif;
     font-size: 45px;
     font-weight: 900;
     text-align: center;
+    padding: 20px;
+    border: solid #c1c1c1;
 }
 
 ul {
@@ -16,3 +26,4 @@ img {
     height: auto;
     width: 800px;
 }
+
